--- a/package.json
+++ b/package.json
@@ -1,24 +1,76 @@
 {
-  "name": "eunhasu",
-  "module": "index.ts",
+  "name": "@imnyang/ui",
+  "version": "1.0.0",
+  "description": "React UI components library for Next.js applications",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles": "./dist/styles.css"
+  },
+  "keywords": [
+    "react",
+    "nextjs",
+    "ui",
+    "components",
+    "typescript"
+  ],
+  "author": "imnyang",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/imnyang/eunhasu.git"
+  },
+  "homepage": "https://github.com/imnyang/eunhasu#readme",
+  "bugs": {
+    "url": "https://github.com/imnyang/eunhasu/issues"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "typescript": "^5"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
     "@storybook/addon-a11y": "^9.1.9",
     "@storybook/addon-docs": "^9.1.9",
     "@storybook/addon-vitest": "^9.1.9",
     "@types/bun": "latest",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "storybook": "^9.1.9",
     "@storybook/nextjs-vite": "^9.1.9",
     "vitest": "^3.2.4",
     "@vitest/browser": "^3.2.4",
     "playwright": "^1.55.1",
-    "@vitest/coverage-v8": "^3.2.4"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+    "@vitest/coverage-v8": "^3.2.4",
+    "typescript": "^5.0.0",
+    "rollup": "^3.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2"
   },
   "scripts": {
+    "build": "rollup -c",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "type-check": "tsc --noEmit",
+    "prepublishOnly": "npm run build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   }
