--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,28 +10,21 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v2
         
     - name: Install dependencies
-      run: npm ci
+      run: bun install
       
     - name: Run tests
-      run: npm run test --if-present
+      run: bun run test --if-present
       
     - name: Build project
-      run: npm run build
+      run: bun run build
       
     - name: Check TypeScript
-      run: npx tsc --noEmit
+      run: bunx tsc --noEmit
