--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run: bun install
       
     - name: Run tests
-      run: bun run test --if-present
+      run: bun run test
       
     - name: Build project
       run: bun run build
