--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,10 @@ jobs:
         
     - name: Install dependencies
       run: bun install
-      
+    
+    - name: Playwright install
+      run: npx playwright install --with-deps
+
     - name: Run tests
       run: bun run test
       
